--- a/src/pages/news/news.scss
+++ b/src/pages/news/news.scss
@@ -1,4 +1,26 @@
 page-news {
+	.title, .subTitle {
+		text-align: center !important; 
+		font-size: 30px !important;
+		font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+		font-weight: 500;
+	}
+	.subTitle {
+		font-size: 15px !important;
+		margin-top: 5px !important;
+	}
+	.menu-button {
+		text-align: center;
+		margin: 0 auto !important;
+		margin-top: 20px !important;
+		width: 70% !important;
+		background: rgb(245, 61, 61);
+		color: white;
+		h2 {
+			margin: 0 auto !important;
+			font-size: 15px !important;
+		}
+	}
 .colinline{
 		display: inline-block;
 		margin-right: 5px;
@@ -32,5 +54,13 @@ page-news {
 
 	.profile-image{
 		border-top: 1px solid grey;
+	}
+	.image-holder {
+		.images {
+			img {
+				max-height: 30vh !important;
+				width: 100% !important;
+			}
+		}
 	}
 }
