--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -53,8 +53,8 @@ $colors: (
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
-
-
+$tabs-md-tab-text-color-active: #f53d3d !important;
+$tabs-md-tab-icon-color-active: #f53d3d !important;
 
 
 // App Windows Variables
