--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <ion-menu [content]="content" >
   <ion-header>
     <ion-toolbar color="danger">
-      <ion-title>Menu</ion-title>
+      <ion-title text-center>Kusina Filipina</ion-title>
     </ion-toolbar>
   </ion-header>
 
