--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -26,8 +26,10 @@ page-home {
 	}
 	.show{
 		width: 100%;
+		max-height: 25vh !important;
+		min-height: 25vh !important;
 		height: auto;
-		padding:0px;
+		padding:2px;
 		margin:0px;
 
 	}
@@ -46,6 +48,21 @@ page-home {
 		//opacity: 0.6;
 		z-index: 99;
 
+	}
+	.image-holder {
+		position: relative;
+		.subtitle {
+			position: absolute;
+			bottom: 0;
+			min-height: 2vh;
+			width: 75%;
+			margin: 2px 2px 6px 2px;
+			background: rgba(0, 0, 0, 0.5);
+			border-radius: 0px 5px 0px 0px;
+			text-align: left;
+			color: #ffffff;
+			padding-left: 10px;
+		}
 	}
 	
 }
