--- a/src/pages/intro/intro.scss
+++ b/src/pages/intro/intro.scss
@@ -1,7 +1,7 @@
 page-intro {
 	.scroll-content {
 		
-	background: rgb(188,4,2) !important;
+	// background: rgb(188,4,2) !important;
 	}
 
 .enterBtn{
@@ -14,5 +14,11 @@ page-intro {
 			 box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 			 border: none !important;
 		}
+	}
+	.title, .subTitle {
+		text-align: center !important; 
+		font-size: 30px !important;
+		font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+		font-weight: 500;
 	}
 }
