--- a/src/pages/news/news.scss
+++ b/src/pages/news/news.scss
@@ -1,9 +1,9 @@
 page-news {
+	
 	.title, .subTitle {
 		text-align: center !important; 
 		font-size: 30px !important;
 		font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-		font-weight: 500;
 	}
 	.subTitle {
 		font-size: 15px !important;
@@ -16,6 +16,7 @@ page-news {
 		width: 70% !important;
 		background: rgb(245, 61, 61);
 		color: white;
+		border-radius: 3px;
 		h2 {
 			margin: 0 auto !important;
 			font-size: 15px !important;
@@ -62,5 +63,10 @@ page-news {
 				width: 100% !important;
 			}
 		}
+	}
+	.intro {
+		text-indent: 10px;
+		padding: 5px 15px 15px 15px;
+		 text-align: justify;
 	}
 }
