--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,6 +6,9 @@
   </ion-header>
 
   <ion-content>
+    <ion-item>
+      <h6>Categories:</h6>
+    </ion-item>
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         &nbsp;&nbsp; <ion-icon name="{{p.icon}}"></ion-icon>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -17,4 +20,4 @@
 </ion-menu>
 
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<ion-nav [root]="'NewsPage'" #content swipeBackEnabled="false"></ion-nav>
