--- a/src/pages/news/news.scss
+++ b/src/pages/news/news.scss
@@ -69,4 +69,28 @@ page-news {
 		padding: 5px 15px 15px 15px;
 		 text-align: justify;
 	}
+	.fooot {
+		word-wrap: normal;
+	}
+	.list {
+		padding-top: 5px;
+		padding-left: 50px;
+		padding-right: 50px;
+		width: 100%;
+		ion-item {
+			ion-label {
+				width: 100%;
+				font-weight: 400;
+				span {
+					font-weight: 100;
+					float: right !important;
+				}
+			}
+		}
+	}
+	.titles {
+		text-align: left !important; 
+		margin-top: 20px !important;
+		font-weight: bold !important;
+	}
 }
