--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -19,3 +19,16 @@
 .titleText {
 		 font-family: 'October Twilight' !important;
 	}
+
+	.fonty {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+.infoHead {
+    font-weight: bold;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: map-get($colors, dark );
+    text-align: center;
+    text-transform: capitalize;
+	padding: 10px 0;
+}
