--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -1,3 +1,21 @@
 page-settings {
-
+    h1 {
+        font-size: 4rem !important;
+    color: rgb(94, 94, 94) !important;
+    }
+ .parg {
+        margin: 2rem 5vw;
+        text-align: center;
+    color: rgb(94, 94, 94) !important;
+    }   
+    .parg p {
+        line-height: 25px;
+        font-size: 4.8vw;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    .iconFont {
+        font-size: 2rem;
+        top: 3px !important;
+        position: relative !important;
+    }
 }
