--- a/src/pages/inside/inside.scss
+++ b/src/pages/inside/inside.scss
@@ -1,7 +1,20 @@
 page-inside {
-
-
-
+ .infoHead {
+        padding-bottom: 5px !important;
+        color: black;
+    }
+    .toolbar-title-md {
+        font-size: 2.5rem !important;
+        font-family: 'October Twilight' !important;
+    }
+    hr {
+        margin-top: 0px !important;
+        margin-bottom: 20px !important;
+        width: 40% !important;
+        height: 3px !important;
+        background: rgb(42,34,45) !important;
+        border-radius: 20px !important;
+    }
 	.tallHeader{
 		height:100px;
 	}
