--- a/src/pages/gallery-tabs/gallery-tabs.scss
+++ b/src/pages/gallery-tabs/gallery-tabs.scss
@@ -31,7 +31,7 @@ page-gallery-tabs {
                     position: absolute;
                     background: linear-gradient(to bottom, rgba(42,34,45, 1) 30%,rgba(169, 127, 184, 0.3) 100%);
                     // background: ;
-                    color: #ffff;
+                    color: rgb(255, 255, 255) !important;
                     font-size: 1.8rem;
                     padding: 10px 0px;
                     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
