--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
 <ion-menu [content]="content" >
   <ion-header>
-    <ion-toolbar color="danger">
+    <ion-toolbar color="dark">
       <ion-title text-center>Kusina Filipina</ion-title>
     </ion-toolbar>
   </ion-header>
@@ -11,7 +11,7 @@
     </ion-item>
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        &nbsp;&nbsp; <ion-icon name="{{p.icon}}"></ion-icon>&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp; <ion-icon name="{{p.icon}}"  color="danger"></ion-icon>&nbsp;&nbsp;&nbsp;&nbsp;
         {{p.title}}
       </button>
     </ion-list>
