--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="content" >
+<ion-menu [content]="content" *ngIf="checkApp" >
   <ion-header>
     <ion-toolbar color="dark">
       <ion-title text-center>Kusina Filipina</ion-title>
@@ -18,6 +18,44 @@
   </ion-content>
 
 </ion-menu>
+
+<ion-header class="header header-md">
+    <ion-toolbar class="toolbar toolbar-md" color="white">
+      <div class="" ></div>
+      <ion-buttons left="" class="bar-buttons bar-buttons-md">
+        <!---->
+        <!----><a class="logo" tappable="" (click)="goTo()">
+        <img src="assets/imgs/logo.jpg" height="40px;">
+        <ion-title style="color: red !important;">Kusina Filipina</ion-title>
+        </a>
+      </ion-buttons>
+      <!---->
+      <!---->
+      <ion-buttons end="" margin-left="" class="bar-buttons bar-buttons-md">
+         <button color="" ion-button="" *ngFor="let p of pagesDesk" (click)="openPage(p)"
+          class="bar-button bar-button-md bar-button-default bar-button-default-md">
+          <span class="">{{p.title}}</span>
+          <div class="button-effect"></div>
+        </button>
+        <!-- <button color="" ion-button="" class="bar-button bar-button-md bar-button-default bar-button-default-md">
+          <span class="">Gallery</span>
+          <div class="button-effect"></div>
+        </button>
+        <button color="" ion-button="" class="bar-button bar-button-md bar-button-default bar-button-default-md">
+          <span class="">About us</span>
+          <div class="button-effect"></div>
+        </button> -->
+      <!--  <button color="primary" hidden-xs-down="" ion-button=""
+          class="bar-button bar-button-md bar-button-default bar-button-default-md bar-button-md-primary"><span
+            class="button-inner">Sign Up</span>
+          <div class="button-effect"></div>
+        </button> -->
+      </ion-buttons>
+    </ion-toolbar>
+    
+    
+</ion-header>
+
 
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
 <ion-nav [root]="'NewsPage'" #content swipeBackEnabled="false"></ion-nav>
