--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -32,3 +32,13 @@
     text-transform: capitalize;
 	padding: 10px 0;
 }
+.header {
+        padding-right: calc((100% - 992px)/ 2);
+    padding-left: calc((100% - 992px)/ 2);
+}
+.logo {
+    display: inline-flex;
+}
+.first-section {
+    padding: 80px 20px 60px 20px;
+}
