--- a/src/app/app.html
+++ b/src/app/app.html
@@ -19,7 +19,7 @@
 
 </ion-menu>
 
-<ion-header class="header header-md">
+<ion-header class="header header-md" *ngIf="!checkApp">
     <ion-toolbar class="toolbar toolbar-md" color="white">
       <div class="" ></div>
       <ion-buttons left="" class="bar-buttons bar-buttons-md">
