--- a/src/pages/gallery-tabs/gallery-tabs.scss
+++ b/src/pages/gallery-tabs/gallery-tabs.scss
@@ -83,9 +83,9 @@ page-gallery-tabs {
                     transition: 1s; 
                 }
                 img {
-                    
                     border-radius: 4px 4px 0px 0px;
-                    height: 40vh;
+                    height: 100%;
+                    width: 100%;
                 }
             }
              .desk-cards-content:hover {
