--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,15 +1,213 @@
 page-profile {
+  #floating-panel {
+    position: absolute;
+    top: 10px;
+    right: 5px;
+    z-index: 5;
+    background-color: #fff;
+    padding: 5px;
+    border: 1px solid #999;
+    text-align: center;
+    font-family: 'Roboto','sans-serif';
+    line-height: 30px;
+    padding-left: 10px;
+  }
+  #map {
+    height: 100%;
+    box-shadow:0 0 20px rgba(0,0,0,0.3);
+  }
+  .mapContainer {
+      width: 100%;
+      height: 50vh;
+      margin: 0 auto;
+       box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+  }
 
-	.profile-image{
-		border-radius:50%;
-		width: 100px;
+   h1 {
+        font-size: 4rem !important;
+    color: rgb(94, 94, 94) !important;
+    }
+ .parg {
+        margin: 2rem 5vw;
+        text-align: center;
+    color: rgb(94, 94, 94) !important;
+    }   
+    .parg p {
+        line-height: 25px;
+        font-size: 4.8vw;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    .iconFont {
+        font-size: 2rem;
+        top: 3px !important;
+        position: relative !important;
+	}
+		.content {
+		 padding-right: calc((100% - 1100px)/ 2) !important;
+	padding-left: calc((100% - 1100px)/ 2) !important;
+	//  background: rgba(201, 200, 200, 0.11) !important
+	}
+	.title, .subTitle {
+		text-align: center !important; 
+		font-size: 30px !important;
+		font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	}
+	.subTitle {
+		font-size: 15px !important;
+		margin-top: 5px !important;
+	}
+	.menu-button {
+		text-align: center;
+		margin: 0 auto !important;
+		margin-top: 20px !important;
+		width: 70% !important;
+		background: rgb(245, 61, 61);
+		color: white;
+		border-radius: 3px;
+		h2 {
+			margin: 0 auto !important;
+			font-size: 15px !important;
+		}
+	}
+	
+	.button-menu-desk {
+		background: rgb(245, 61, 61) !important;
+		transition: .5s;
+	}
+	.button-menu-desk:hover {
+		background: #b11e1e !important;
+		transition: .5s;
+	}
+	.text-menu {
+		padding: 20px 20px 20px 35px;
+	}
+.colinline{
+		display: inline-block;
+		margin-right: 5px;
+		margin-left: 5px;
+	}
+
+.suggestion{
+		//max-height:60px !important;
+		//max-width:60px !important;
+		margin:0 auto;
+		padding: 1px;
+		border:1px solid lightgray;
+		border-radius: 50%;
+	}
+
+	ion-card{
+		margin:0px !important;
+		width: 100% !important;
+	}
+
+	.card-content-md{
+		padding: 5px 16px !important;
+	}
+	.card-title-md{
+		margin:0px !important;
 	}
 
 	ion-icon{
-		font-size: 30px;
+		margin-right: 10px;
 	}
 
-	ion-col{
-		text-align: center;
+	.profile-image{
+		border-top: 1px solid grey;
 	}
+	.image-holder {
+			
+			width: 100%;
+		.images {
+			img {
+				max-height: 30vh !important;
+				width: 100% !important;
+			}
+		}
+	}
+	.desk-image-holder {
+		
+			width: 100%;
+		.images {
+			img {
+				max-height: 40vh !important;
+				border-radius: 3px;
+				
+				box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+				width: 100% !important;
+			}
+		}
+	}
+	.intro {
+		text-indent: 10px;
+		padding: 5px 15px 15px 15px;
+		 text-align: justify;
+	}
+	.fooot {
+		word-wrap: normal;
+	}
+	.lister {
+		padding-left: 50px;
+		padding-right: 50px;
+		width: 100%;
+		ion-item {
+			ion-label {
+				width: 100%;
+				font-weight: 400;
+				span {
+					font-weight: 100;
+					float: right !important;
+				}
+			}
+		}
+	}
+	.listy {
+		
+    color: rgb(94, 94, 94) !important;
+		width: 100%;
+		display: inline-flex;
+		div {
+		width: 50%;
+		font-size: 1.3rem !important;
+		.item-inner {
+			border-bottom: none !important;
+		}ion-item {
+			ion-label {
+				
+				span {
+					font-weight: 500 !important;
+					color: rgb(245, 61, 61) !important; 
+				}
+			}
+		}
+		}
+	}
+	.deskList { 
+		ion-label { font-size: 1.6rem !important; }
+	}
+	
+	.no-line {
+		.item-inner {
+			border-bottom: none !important;
+		}
+	}
+	.text-pad {
+		padding: 50px 100px!important;
+	}
+	 .infoHead {
+        padding-bottom: 5px !important;
+        color: black;
+    }
+    .toolbar-title-md {
+        font-size: 2.5rem !important;
+        font-family: 'October Twilight' !important;
+    }
+    hr {
+        margin-top: 0px !important;
+        margin-bottom: 20px !important;
+        width: 40% !important;
+        height: 3px !important;
+        background: rgb(42,34,45) !important;
+        border-radius: 20px !important;
+    }
 }
