--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -57,3 +57,12 @@
      margin-left: 8px;
      margin-right: 8px;
  }
+ .footer-text {
+        position: relative;
+        h6 {
+            right: 0;
+            font-size: 1rem;
+            font-weight: bold;
+            padding-left: 10px;
+        }
+    }
