--- a/src/pages/news/news.scss
+++ b/src/pages/news/news.scss
@@ -6,12 +6,78 @@ page-news {
 	}
 	.title, .subTitle {
 		text-align: center !important; 
-		font-size: 30px !important;
-		font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+		font-size: 38px !important;
+		font-family: 'Crete Round',Georgia,'Times New Roman',serif;
+		color: white;
+		font-weight: 500;
+	}
+	.cover {
+		border-radius: 0px 0px 0px 180px !important;
+		// background-image: url("assets/");
+		position: relative;
+	}
+	.textTopR {
+		font-size: 1.5rem !important;
+		font-weight: 500;
+	}
+	.titles {
+		color: #d32323 !important;
+		padding: 0px 10px;
+	}
+	 .iconFont {
+        top: 2px !important;
+		position: relative !important;
+		margin-right: 0px !important;
+    }
+	.show{
+		height: auto;
+		padding: 10px;
+		margin:0px;
+		img {
+			border: 2px solid #c2c0c0;
+			box-shadow: 0 10px 6px -6px #777;
+			max-height: 20vh !important;
+			min-height: vh !important;
+			width: 100%;
+		}
+	}
+	.image-holder {
+		position: relative;
+		.subtitle {
+			position: absolute;
+			bottom: 0;
+			font-family: 'Crete Round',Georgia,'Times New Roman',serif;
+			min-height: 2vh;
+			width: 75%;
+			margin: 2px 2px 16px 12px;
+			background: rgba(0, 0, 0, 0.5);
+			border-radius: 0px 5px 0px 0px;
+			text-align: left;
+			color: #ffffff;
+			padding-left: 10px;
+			padding: 0px 10px;
+			h6 {
+				
+			font-weight: bold !important;
+			font-size: 1.2rem !important;
+			}
+		}
+	}
+	.texts {
+		position: absolute;
+		left: 0;
+		right: 0;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 50px;
+		width: 300px;
+
 	}
 	.subTitle {
 		font-size: 15px !important;
+		font-weight: bold;
 		margin-top: 5px !important;
+
 	}
 	.menu-button {
 		text-align: center;
@@ -99,6 +165,7 @@ page-news {
 		text-indent: 10px;
 		padding: 5px 15px 15px 15px;
 		 text-align: justify;
+		 font-family: 'Crete Round',Georgia,'Times New Roman',serif;
 	}
 	.fooot {
 		word-wrap: normal;
