--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -25,7 +25,7 @@ page-home {
 		margin-right: 16px;
 	}
 	.show{
-		width: 100%;
+		width: 5vw !important;
 		max-height: 25vh !important;
 		min-height: 25vh !important;
 		height: auto;
