--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <ion-menu [content]="content" *ngIf="checkApp" >
   <ion-header>
-    <ion-toolbar color="dark">
-      <ion-title text-center>Kusina Filipina</ion-title>
+    <ion-toolbar color="brownLight" class="menuHeader">
+     <img src="assets/imgs/logoBlack.png" alt="">
     </ion-toolbar>
   </ion-header>
 
