--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -40,7 +40,8 @@ $colors: (
   light:      #020202,
   dark:       black,
   white:      #fff,
-  semiDark: rgb(245,245,245)
+  semiDark: rgb(245,245,245),
+  brownLight: rgb(29,29,29)
 );
 
 
