--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -16,6 +16,11 @@
 // automatically applied to the <body> element in the app.
 @import '../theme/fonts';
 
+ion-toolbar {
+   --background-color: transparent;
+   --ion-color-base: transparent !important;
+ }
+
 .titleText {
 		 font-family: 'October Twilight' !important;
 	}
@@ -33,10 +38,10 @@
 	padding: 10px 0;
 }
 .header {
-        padding-right: calc((100% - 1100px)/ 2);
-    padding-left: calc((100% - 1100px)/ 2);
+    //    padding-right: calc((100% - 1100px)/ 2);
+    //padding-left: calc((100% - 1100px)/ 2);
     // background: #f53d3d;
-    background: #d32323;
+    background-color: rgba(0,0,0,0.8);
     color: black !important;
 }
 .logo {
