--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -42,7 +42,7 @@ $colors: (
   white:      #fff,
   semiDark: rgb(245,245,245),
   brownLight: rgb(29,29,29),
-  goldenBrown: rgb(196,148,51)
+  goldenBrown: #C49433,
 );
 
 
