--- a/src/app/app.html
+++ b/src/app/app.html
@@ -25,7 +25,7 @@
       <ion-buttons left="" class="bar-buttons bar-buttons-md">
         <!---->
         <!----><a class="logo" tappable="" (click)="goTo()">
-        <ion-title style="color: #d32323 !important;">KUSINA FILIPINA</ion-title>
+        <ion-title class="MenuTitle">KUSINA FILIPINA</ion-title>
         </a>
       </ion-buttons>
       <!---->
