--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -62,6 +62,10 @@ ion-toolbar {
      margin-left: 8px;
      margin-right: 8px;
  }
+
+ .bar-button:hover, .MenuTitle:hover {
+     color:#C49433 !important;
+ }
  .footer-text {
         position: relative;
         height: 13vh;
