--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -17,7 +17,7 @@
 @import '../theme/fonts';
 
 .titleText {
-		 font-family: 'October Twilight' !important;
+		 font-family: 'Cookie Curvy' !important;
 	}
 
 	.fonty {
