--- a/src/theme/fonts.scss
+++ b/src/theme/fonts.scss
@@ -4,3 +4,10 @@
    font-weight: 100;
    font-style: normal;
  }
+
+ @font-face {
+   font-family: 'Cookie Curvy';
+   src: url('../assets/fonts/cookie.ttf');
+   font-weight: 100;
+   font-style: normal;
+ }
