--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -25,6 +25,14 @@ ion-toolbar {
 		 font-family: 'Cookie Curvy' !important;
 	}
 
+.Kusina {
+         font-family: 'Ge Body' !important;
+    }
+
+.black{
+    background-color:black;
+}
+
 	.fonty {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
@@ -48,7 +56,11 @@ ion-toolbar {
     display: inline-flex;
 }
 .first-section {
-    padding: 80px 20px 60px 20px;
+    padding: 30px 20px 20px 20px;
+}
+
+.second {
+    padding: 120px 20px 0px 20px;
 }
 .padding-all { 
      padding-right: calc((100% - 1440px)/ 2);
