--- a/src/theme/fonts.scss
+++ b/src/theme/fonts.scss
@@ -11,3 +11,10 @@
    font-weight: 100;
    font-style: normal;
  }
+
+  @font-face {
+   font-family: 'Ge Body';
+   src: url('../assets/fonts/gebodybody.ttf');
+   font-weight: 100;
+   font-style: normal;
+ }
