--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -43,6 +43,8 @@ $colors: (
   semiDark: rgb(245,245,245),
   brownLight: rgb(29,29,29),
   goldenBrown: #C49433,
+  transp: rgb(59,55,52)
+
 );
 
 
