--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -41,7 +41,7 @@ ion-toolbar {
     //    padding-right: calc((100% - 1100px)/ 2);
     //padding-left: calc((100% - 1100px)/ 2);
     // background: #f53d3d;
-    background-color: rgba(0,0,0,0.8);
+    background: transparent;
     color: black !important;
 }
 .logo {
@@ -92,3 +92,9 @@ ion-toolbar {
             margin: 0 auto;
         }
     }
+    	.curvyFont {
+		 font-family: 'Cookie Curvy';
+	 }
+	.headFont {
+		font-family: 'Ge Body' !important;
+	}
