--- a/src/pages/news/news.scss
+++ b/src/pages/news/news.scss
@@ -11,18 +11,72 @@ page-news {
 		color: white;
 		font-weight: 500;
 	}
-
-	.transparent{
-		background-color: rgba(0,0,0,0) !important;
+	.bar-header {
+		color: black !important; 
 	}
-
-	ion-toolbar {
-		--background: transparent;
-		--ion-color-base: transparent !important;
+	.welcomeText {
+		font-size: 4rem !important;
+		margin: 0px auto;
+		font-weight: 500;
 	}
-
+	.mainTitles {
+		border: 2px solid #ffffff;
+		h2 {
+			color: rgb(196,148,51);
+			font-weight: bold;
+			font-size: 5rem;
+			padding: 0px !important;
+			margin: 0px auto;
+		}
+		h3 {
+			color: #ffffff;
+			font-weight: bold;
+			font-size: 3rem;
+		}
+	}
+	.contentSections {
+		margin: 0 auto;
+		text-align: center;
+		padding: 100px 10px;
+		.mainTexts {
+			font-size: 2.5rem;
+		}
+		.lestMainTexts { font-size: 2rem; }
+		.subTexts {
+			color: rgb(102,102,102);
+			padding: 0px 25px;
+			margin: 0 auto !important;
+			font-size: 1.5rem;
+			p {	
+				line-height: 1.8;
+			}
+		}
+		.alarmIcon {
+			font-size: 6rem;
+		}
+		.sched {
+			h4 { font-size: 1.5rem !important; }
+		}
+	}
+	.secndSection {
+		padding: 0px 10px !important;
+		position: relative;
+		width: 100%;
+		height: 100%;
+		height: 135vh;
+		.mainTitle {
+			padding: 50px 0px;
+			background: rgb(29,29,29);
+			height: 50vh;
+		}
+		.subTexts {
+			position: absolute;
+			top: 180px;
+		}
+	}
+	.goldenText { color: rgb(196,148,51);  }
 	.cover {
-		border-radius: 0px 0px 0px 150px !important;
+		// border-radius: 0px 0px 0px 150px !important;
 		// background-image: url("assets/");
 		position: relative;
 		box-shadow: -200px -35px 75px -51px rgba(0,0,0,0.75);
@@ -33,27 +87,66 @@ page-news {
 		font-size: 1.5rem !important;
 		font-weight: 500;
 	}
-
+	.headText {
+		font-family: Roboto;
+		margin: 30px 0px 0px 0px;
+		font-size: 2.5rem !important;
+		padding: 0px 15px;
+		color: black !important;
+	}
 	.titles {
-		color: rgb(211, 35, 35) !important;
+		color: rgb(59,55,52) !important;
 		padding: 0px 10px;
 		font-weight: 700;
+		font-size: 3.5rem;
 	}
 	 .iconFont {
         top: 2px !important;
 		position: relative !important;
 		margin-right: 0px !important;
-    }
+	}
+	
+	#map {
+    height: 100%;
+    box-shadow:0 0 20px rgba(0,0,0,0.3);
+	}
+	.mapContainer {
+		width: 95%;
+		height: 50vh;
+		margin: 0 auto;
+		box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+		margin: 0 auto;
+		border: 3px solid rgb(29,29,29);
+	}
+
+	
 	.show{
 		height: auto;
 		padding: 10px;
 		margin:0px;
+		position: relative;
 		img {
 			border: 2px solid #c2c0c0;
-			box-shadow: 0 10px 6px -6px rgba(211, 35, 35,0.75);
-			max-height: 20vh !important;
-			min-height: vh !important;
+			box-shadow: 0 10px 6px -6px rgb(196,148,51); 
+			max-height: 30vh !important;
+			min-height: 30vh !important;
 			width: 100%;
+		}
+		.subtitle {
+			position: absolute;
+			bottom: 0;
+			margin-bottom: 30px;
+			// font-family: 'Crete Round',Georgia,'Times New Roman',serif;
+			width: 93%;
+			// background: rgba(0, 0, 0, 0.5);
+			border-radius: 0px 5px 0px 0px;
+			text-align: center;
+			color: #ffffff;
+			// top: 75px;
+			h6 {
+				font-weight: bold !important;
+				font-size: 1.8rem !important;
+			}
 		}
 	}
 
@@ -62,26 +155,7 @@ page-news {
 		height:25vw !important;
 	}
 	.image-holder {
-		position: relative;
-		.subtitle {
-			position: absolute;
-			bottom: 0;
-			font-family: 'Crete Round',Georgia,'Times New Roman',serif;
-			min-height: 2vh;
-			width: 75%;
-			margin: 2px 2px 16px 12px;
-			background: rgba(0, 0, 0, 0.5);
-			border-radius: 0px 5px 0px 0px;
-			text-align: left;
-			color: #ffffff;
-			padding-left: 10px;
-			padding: 0px 10px;
-			h6 {
-				
-			font-weight: bold !important;
-			font-size: 1.2rem !important;
-			}
-		}
+		
 	}
 	.texts {
 		position: absolute;
@@ -94,7 +168,7 @@ page-news {
 		text-align: center;
 	}
 	.mobile-footer {
-		border-radius: 0px 80px 0px 0px;
+		// border-radius: 0px 80px 0px 0px;
 		color: #ffffff;
 		.eatIcon {
 			font-size: 3.5rem;
@@ -119,13 +193,13 @@ page-news {
 		background: rgb(196,148,51);
 		 box-shadow: 0 10px 6px -6px #777;
 		position: relative;
-		margin-top: 70px;
+		margin-top: 30px;
 		img {
 			height: 140px;
 			position: absolute;
 			right: 0;
 			margin-right: -20px;
-			top: -70px;
+			top: -75px !important;
 		}
 	}
 	// Slides
@@ -139,6 +213,7 @@ page-news {
 				div {
 					margin-top: 10px;
 					width: 100%;
+					text-align: center;
 					p {
 						padding: 10px;
 						margin: 0 auto;
@@ -148,11 +223,16 @@ page-news {
 						-webkit-border-radius:50%;
 						min-width:50px !important;
 						max-width: 50px;
-						border: 2px solid rgba(211, 35, 35,1);
+						// border: 2px solid rgba(211, 35, 35,1);
 						// background: rgba(211, 35, 35,1);
-						color: rgba(211, 35, 35,1);
+						color: #ffffff;
+						background: rgb(196,148,51); 
 						font-weight: bold;
-						font-size: 4vw;
+						font-size: 25px;
+						text-align: center;
+						ion-icon {
+							margin: 0 auto;
+						}
 					}
 					ion-label {
 						text-align: center;
@@ -161,10 +241,13 @@ page-news {
 						hr {
 							font-weight: 500;
 							width: 30%;
-							background: rgba(211, 35, 35,1);
+							background: rgb(196,148,51); 
 							height: 2px;
 							border-radius: 5px;
 							margin-top: 2px;
+						}
+						span {
+							color: rgb(196,148,51); 
 						}
 					}
 				}
@@ -182,10 +265,10 @@ page-news {
 		text-align: center;
 		margin: 0 auto !important;
 		margin-top: 20px !important;
-		width: 70% !important;
-		background: rgb(245, 61, 61);
+		width: 50% !important;
+		background: rgb(196,148,51);
 		color: white;
-		border-radius: 3px;
+		border-radius: 10px;
 		h2 {
 			margin: 0 auto !important;
 			font-size: 15px !important;
@@ -314,7 +397,7 @@ page-news {
 		text-align: left !important; 
 		margin-top: 20px !important;
 		font-weight: bold !important;
-		color: rgb(0, 0, 0) !important; 
+		// color: rgb(0, 0, 0) !important; 
 		background: transparent !important;
 	}
 	.no-line {
@@ -326,4 +409,17 @@ page-news {
    --background-color: transparent;
    --ion-color-base: transparent !important;
  }
+ ion-navbar {
+	 background: transparent !important;
+ }
+ 	.curvyFont {
+		 font-family: 'Cookie Curvy';
+	 }
+	.headFont {
+		font-family: 'Ge Body' !important;
+	}
+	.menu-buttonHover {
+		margin-top: 0px !important;
+		margin-bottom: 50px !important;
+	}
 }
