--- a/src/app/app.html
+++ b/src/app/app.html
@@ -20,37 +20,34 @@
 </ion-menu>
 
 <ion-header class="header header-md" *ngIf="!checkApp" color="dark">
-    <ion-toolbar class="toolbar toolbar-md" color="dark">
+    <ion-navbar  color="dark" class="bar-header">
+      <!-- <button ion-button menuToggle>
+        <ion-icon name="menu" class="bar-header"></ion-icon>
+      </button> -->
+      <img src="assets/imgs/logoName.png" height="60px;">
+      <!-- <ion-title style="color: red !important;">Kusina Filipina</ion-title> -->
+    
+    <ion-buttons end="" margin-left="" class="bar-buttons bar-buttons-md">
+      <button color="" ion-button="" *ngFor="let p of pagesDesk" (click)="openPage(p)"
+        class="bar-button bar-button-md bar-button-default bar-button-default-md">
+        <span class="">{{p.title}}</span>
+        <div class="button-effect"></div>
+      </button>
+    
+    </ion-buttons>
+    
+    </ion-navbar>
+    <!-- <ion-toolbar class="toolbar toolbar-md" >
       <div class="" ></div>
       <ion-buttons left="" class="bar-buttons bar-buttons-md">
-        <!---->
-        <!----><a class="logo" tappable="" (click)="goTo()">
+       
+        <a class="logo" tappable="" (click)="goTo()">
         <ion-title class="MenuTitle">KUSINA FILIPINA</ion-title>
         </a>
       </ion-buttons>
-      <!---->
-      <!---->
-      <ion-buttons end="" margin-left="" class="bar-buttons bar-buttons-md">
-         <button color="" ion-button="" *ngFor="let p of pagesDesk" (click)="openPage(p)"
-          class="bar-button bar-button-md bar-button-default bar-button-default-md">
-          <span class="">{{p.title}}</span>
-          <div class="button-effect"></div>
-        </button>
-        <!-- <button color="" ion-button="" class="bar-button bar-button-md bar-button-default bar-button-default-md">
-          <span class="">Gallery</span>
-          <div class="button-effect"></div>
-        </button>
-        <button color="" ion-button="" class="bar-button bar-button-md bar-button-default bar-button-default-md">
-          <span class="">About us</span>
-          <div class="button-effect"></div>
-        </button> -->
-      <!--  <button color="primary" hidden-xs-down="" ion-button=""
-          class="bar-button bar-button-md bar-button-default bar-button-default-md bar-button-md-primary"><span
-            class="button-inner">Sign Up</span>
-          <div class="button-effect"></div>
-        </button> -->
-      </ion-buttons>
-    </ion-toolbar>
+     
+      
+    </ion-toolbar> -->
     
     
 </ion-header>
