--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -49,7 +49,7 @@ ion-toolbar {
     //    padding-right: calc((100% - 1100px)/ 2);
     //padding-left: calc((100% - 1100px)/ 2);
     // background: #f53d3d;
-    background: transparent;
+    // background: transparent;
     color: black !important;
 }
 .logo {
