--- a/src/app/app.html
+++ b/src/app/app.html
@@ -19,8 +19,29 @@
 
 </ion-menu>
 
-<ion-header class="header header-md" *ngIf="!checkApp" color="dark">
-    <ion-navbar  color="dark" class="bar-header">
+
+<ion-header class="header header-md" *ngIf="!checkApp" color="goldenBrown">
+  <div color="goldenBrown" class="first-header">
+    <div>
+      <ion-row color=""
+       >
+        <p style="padding: 10px;margin:0 !important;width:150px;"> <ion-icon name="call"></ion-icon> (+088) 589-8745</p>
+        <p style="padding: 10px;margin:0;width:300px"> <ion-icon name="time"></ion-icon> Opening Hours: 8:00am - 11:30pm</p>
+      <!-- <ion-buttons style="margin-right:0;" class="bar-buttons bar-buttons-md">
+      <button color="" ion-button="" *ngFor="let p of pagesDesk"
+        class="bar-button bar-button-md bar-button-default bar-button-default-md">
+        <span class=""></span>
+        <div class="button-effect"></div>
+      </button>
+    
+    </ion-buttons> -->
+      </ion-row>
+    
+    </div>
+    
+    
+    </div>
+    <ion-navbar  color="white" class="bar-header">
       <!-- <button ion-button menuToggle>
         <ion-icon name="menu" class="bar-header"></ion-icon>
       </button> -->
