--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -33,6 +33,11 @@ ion-toolbar {
     background-color:black;
 }
 
+.first-header{
+    height:px !important;
+    background-color: #C49433 !important;
+}
+
 	.fonty {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
@@ -50,13 +55,17 @@ ion-toolbar {
     //padding-left: calc((100% - 1100px)/ 2);
     // background: #f53d3d;
     // background: transparent;
-    color: black !important;
+    color: white !important;
 }
 .logo {
     display: inline-flex;
 }
 .first-section {
     padding: 30px 20px 20px 20px;
+}
+
+.first-section2 {
+    padding: 0px 20px 20px 20px;
 }
 
 .second {
