--- a/src/pages/news/news.scss
+++ b/src/pages/news/news.scss
@@ -35,6 +35,7 @@ page-news {
 	}
 	.contentSections {
 		margin: 0 auto;
+		border: 5px solid black;
 		text-align: center;
 		padding: 100px 10px;
 		.mainTexts {
@@ -176,6 +177,7 @@ page-news {
 			max-height: 40vw !important;
 			min-height: vh !important;
 			width: 100%;
+			max-width: 400px;
 		}
 	}
 
@@ -245,7 +247,7 @@ page-news {
 		right: 0;
 		margin-left: auto;
 		margin-right: auto;
-		margin-top: 120px;
+		margin-top: 150px;
 		width: 500px;
 	}
 
@@ -336,6 +338,60 @@ page-news {
 					}
 					ion-label {
 						text-align: center;
+						margin: 0 auto;
+						margin-top: 10px !important;
+						hr {
+							font-weight: 500;
+							width: 30%;
+							background: rgb(196,148,51); 
+							height: 2px;
+							border-radius: 5px;
+							margin-top: 2px;
+						}
+						span {
+							color: rgb(196,148,51); 
+						}
+					}
+				}
+			}
+		}
+	}
+
+	.slidesHolder2 {
+		margin-bottom: 10px;
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+		.slides2 {
+			.slidesCard2 {
+				width: 100%;
+				display: inline-flex;
+				div {
+					margin-top: 10px;
+					width: 100%;
+					text-align: center;
+					p {
+						padding: 10px;
+						margin: 0 auto;
+						height:120px;
+						border-radius:50%;
+						-moz-border-radius:50%;
+						-webkit-border-radius:50%;
+						min-width:120px !important;
+						max-width: 120px;
+						// border: 2px solid rgba(211, 35, 35,1);
+						// background: rgba(211, 35, 35,1);
+						color: #ffffff;
+						background: rgb(196,148,51); 
+						font-weight: bold;
+						font-size: 50px;
+						text-align: center;
+						ion-icon {
+							margin: 15px 0 0 0;
+							font-size:70px;
+						}
+					}
+					ion-label {
+						text-align: center;
+						font-size:20px;
 						margin: 0 auto;
 						margin-top: 10px !important;
 						hr {
