--- a/src/theme/fonts.scss
+++ b/src/theme/fonts.scss
@@ -18,3 +18,17 @@
    font-weight: 100;
    font-style: normal;
  }
+
+  @font-face {
+   font-family: 'Allura';
+   src: url('../assets/fonts/allura.ttf');
+   font-weight: 100;
+   font-style: normal;
+ }
+
+   @font-face {
+   font-family: 'Josef Sans';
+   src: url('../assets/fonts/josef.ttf');
+   font-weight: 100;
+   font-style: normal;
+ }
