--- a/src/pages/notifications/notifications.scss
+++ b/src/pages/notifications/notifications.scss
@@ -12,16 +12,19 @@ page-notifications {
     line-height: 30px;
     padding-left: 10px;
   }
-  #map {
+ 	#map {
     height: 100%;
     box-shadow:0 0 20px rgba(0,0,0,0.3);
-  }
-  .mapContainer {
-      width: 100%;
-      height: 50vh;
-      margin: 0 auto;
-    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-  }
+	}
+	.mapContainer {
+		width: 95%;
+		height: 50vh;
+		margin: 0 auto;
+		box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+		margin: 0 auto;
+		border: 3px solid rgb(29,29,29);
+	}
+
 
    h1 {
         font-size: 4rem !important;
@@ -37,11 +40,11 @@ page-notifications {
         font-size: 4.8vw;
         font-family: Arial, Helvetica, sans-serif;
     }
-    .iconFont {
-        font-size: 2rem;
-        top: 3px !important;
-        position: relative !important;
-    }
+    // .iconFont {
+    //     font-size: 2rem;
+    //     top: 3px !important;
+    //     position: relative !important;
+    // }
     .infoIcon {
         margin-top: 10px !important;
     }
@@ -128,31 +131,46 @@ page-notifications {
 		 box-shadow: 0 10px 6px -6px #777;
 		position: relative;
     }
-    .bar-header {
-		color: black !important; 
-    }
+     .iconFont {
+        top: 2px !important;
+		position: relative !important;
+		margin-right: 0px !important;
+	}
     .cover {
 		// border-radius: 0px 0px 0px 150px !important;
-		// background-image: url("assets/");
-		position: relative;
+		 background: url('../../assets/imgs/coverSub.jpg') no-repeat center center fixed;
+        position: relative;
+        width: 100%;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
 		box-shadow: -200px -35px 75px -51px rgba(0,0,0,0.75);
 		border: .5px solid black;
-		// height: 40vh;
+        height: 50vh;
+        overflow: hidden;
+        width: 100%; 
+        text-align: center;
+        background-color: #0666a3 
+        img {
+            position: absolute;
+            height: 50vh !important;
+            width: 1000vw;
+        }
     }
     .welcomeText {
-		font-size: 4rem !important;
-		margin: 0px auto;
-		font-weight: 500;
+		font-size: 6rem !important;
+        font-weight: bold;
+        width: 100%;
+        margin: auto;
     }
     .texts {
-		position: absolute;
-		left: 0;
-		right: 0;
-		margin-left: auto;
-		margin-right: auto;
-		margin-top: 50px;
-		width: 300px;
-		text-align: center;
+        display: inline-block; 
+        margin: 0 auto;
+        padding: 3px;
+         width: auto;
+        height: auto;
+        margin: 0 auto;
     }
     .mainTitles {
 		border: 2px solid #ffffff;
@@ -173,5 +191,165 @@ page-notifications {
 		text-align: center !important; 
 		color: white;
 		font-weight: 500;
+    }
+    .inputSection {
+        display: inline-flex;
+        border-radius: 50px;
+        border: 2px solid rgb(196,148,51);
+        overflow: hidden;
+        font-size: 1.5rem;
+        input {
+            padding: 5px;
+        }
+        button {
+            color: #ffffff;
+            font-size: 1.5rem;
+            background: rgb(196,148,51);
+        }
+    }
+    .contentSections {
+		margin: 0 auto;
+		text-align: left;
+        padding: 100px 15px;
+        hr {
+            width: 50%;
+            background: rgb(196,148,51);
+            height: 5px;
+            text-align: left;
+            margin: -10px 0px;
+        }
+		.mainTexts {
+            font-size: 2.5rem;
+            margin-top: 0px !important;
+            z-index: 999999;
+		}
+        .lestMainTexts { 
+            font-size: 1.8rem; 
+            line-height: 2;
+        }
+		.subTexts {
+			color: rgb(102,102,102);
+			// padding: 0px 25px;
+			margin: 0 auto !important;
+			font-size: 1.5rem;
+			p {	
+				line-height: 2;
+			}
+		}
+		.alarmIcon {
+			font-size: 6rem;
+		}
+		.sched {
+			h4 { font-size: 1.5rem !important; }
+        }
+        .subDesc {
+            margin-top: 20px;
+            h2 {
+                font-family: 'Allura';
+                font-weight: bold;
+                font-size: 3.5rem;
+            }
+            h3 {
+                font-family: 'Josef Sans';
+                font-size: 1.5rem;
+            }
+            .subTexts { margin-bottom: 50px !important; }
+        }
+    }
+    	.secndSection {
+            padding: 0px 10px !important;
+            position: relative;
+            width: 100%;
+            height: 100%;
+			background: rgba(119, 119, 119, 0.164);
+		.mainTitle {
+			padding: 50px 0px;
+			height: 50vh;
+        }
+        
+        .image-holder {
+            margin: 20px auto !important;
+            width: 100%;
+            text-align: center;
+            padding: 20px 0px !important;
+            .show {
+                padding: 40px;
+                ion-icon {
+                    font-size: 4rem;
+                }
+                h2, h6 {
+                    margin: 5px !important;
+                }
+                h2 {
+                    font-size: 3.5rem;
+                    font-weight: bold;
+                }
+            }
+        }
+    }
+    .thSection {
+            text-align: center;
+            margin-bottom: 70px;
+            background: rgba(184, 184, 184, 0.11);
+            
+        .mainTexts {
+            text-align: center;
+            font-size: 2.5rem;
+        }
+        img {
+            border-radius: 50%;
+            height: 100px;
+            width: 100px;
+        }
+        .subTexts {
+            line-height: 2;
+            .goldenText {
+                font-size: 4rem;
+                line-height: 1px;
+            }
+        }
+        ion-slides {
+            padding: 20px 0px;
+           
+        }
+    }
+    .mobile-footer {
+		// border-radius: 0px 80px 0px 0px;
+		color: #ffffff;
+		.eatIcon {
+			font-size: 3.5rem;
+			position: absolute;	
+			top: 20px;
+			right: 20px;
+			.eatIconContent {
+				position: relative;
+				display: inline-flex;
+				.eatSubText {
+					font-size: 1.2rem;
+					width: 20vw;
+					margin-top: 5px !important;
+				}		
+			}
+		}		
+		
 	}
+    .timeSched {
+        text-align: center;
+         .mainTexts { font-size: 2rem !important; }
+         
+	.menu-button {
+		text-align: center;
+		margin: 0 auto !important;
+		margin-top: 20px !important;
+		width: 50% !important;
+		background: rgb(196,148,51);
+		color: white;
+		border-radius: 10px;
+		h2 {
+			margin: 0 auto !important;
+			font-size: 15px !important;
+		}
+	}
+    }
+	.goldenText { color: rgb(196,148,51);  }
 }
