--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -25,6 +25,10 @@ ion-toolbar {
 		 font-family: 'Cookie Curvy' !important;
 	}
 
+.contact{
+    padding-top:5.8vw;
+}
+
 .Kusina {
          font-family: 'Ge Body' !important;
     }
